--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 <body>
 
     <!-- TITLE -->
-    <div class="div">Bienvenue dans ce formation GIT!</div>
-
+    <div id="top-banner" class="div">Bienvenue dans ce formation GIT!</div>
+    <div class="text-banner">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis quisquam voluptate hic
+        assumenda molestiae accusantium!</div>
 </body>
 
 </html>
