--- a/index.html
+++ b/index.html
@@ -14,8 +14,18 @@
 
     <!-- TITLE -->
     <div id="top-banner" class="div">Bienvenue dans ce formation GIT!</div>
-    <div class="text-banner">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis quisquam voluptate hic
-        assumenda molestiae accusantium!</div>
+    <!-- description -->
+    <div class="div">
+        <h2>Ma description</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis dolor accusantium corrupti vero deleniti
+            fugiat.</p>
+        <!-- recompense -->
+        <div class="div">
+            <h2>Mes récompenses</h2>
+            <p>en construction...</p>
+
+
+
 </body>
 
 </html>
