--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <div id="top-banner" class="div">Bienvenue dans ce formation GIT!</div>
     <div class="text-banner">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis quisquam voluptate hic
         assumenda molestiae accusantium!</div>
+
+    <img src="images/medal_bronze.png" alt="">
 </body>
 
 </html>
