ajout commande git

--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
         assumenda molestiae accusantium!</div>
 
     <img src="images/medal_bronze.png" alt="">
+
+    <!-- list -->
+    <ul>
+        <li>Git Add</li>
+        <li>Git Commit</li>
+        <li>Git Push</li>
+    </ul>
 </body>
 
 </html>
