--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <li>Git Commit</li>
         <li>Git Push</li>
         <li>Git Pull</li>
+        <li>Git Branch</li>
     </ul>
 </body>
 
